--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2018"
 num = "0.1.27"
 image = "0.22.0"
 rand = "0.7.0"
+rocket = "0.4.5"
+
+[dependencies.rocket_contrib]
+version = "0.4.5"
+default-features = false
+features = ["tera_templates"]
